StormLib: Add as submodule
We target `nvs/StormLib`.  Specially, the `lua-stormlib` branch.  This
is merely for the purpose of building `lua-stormlib`, as the intended
target is still an official StormLib release.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "compat-5.3"]
 	path = lib/compat-5.3
 	url = https://github.com/keplerproject/lua-compat-5.3
+[submodule "lib/stormlib"]
+	path = lib/stormlib
+	url = https://github.com/nvs/StormLib
+	branch = lua-stormlib
