--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,8 @@ insert_final_newline = true
 
 [*.md]
 indent_style = space
+indent_size = 4
+trim_trailing_whitespace = false
 
 [COMMIT_EDITMSG]
 max_line_length = 72
